# py-zoom-meeting-sdk

./: .gitignore  CMakeLists.txt  CMakeLists.txt.stash  Dockerfile  MANIFEST.in  README.md  bot.py  compose.yaml  pyproject.toml  raw_start.sh  vcpkg.json
.github/workflows/: ci.yml  wheels.yml
docker/: raw_start.sh
sample_program/: deepgram_transcriber.py  gstreamer_pipeline.py  meeting_bot.py  sample.py  streaming_uploader.py  video_input_manager.py
scripts/: build.sh  raw_start.sh
src/: auth_service_event_callbacks.cpp  ilist_caster.h  m1.cpp  m2.cpp  m3.cpp  m4.cpp  meeting_bo_creator_event_callbacks.cpp  meeting_participants_ctrl_event_callbacks.cpp  meeting_recording_ctrl_event_callbacks.cpp  meeting_reminder_event_callbacks.cpp  meeting_service_event_callbacks.cpp  module.cpp  pch.hpp  pythonlib.cpp  setup.py  setup_cython.py  utilities.cpp  zoom_meeting_sdk_python.cpp  zoom_sdk.cpp  zoom_sdk.pxd  zoom_sdk.pyx  zoom_sdk_audio_raw_data_delegate_callbacks.cpp  zoom_sdk_renderer_delegate_callbacks.cpp  zoom_sdk_video_source_callbacks.cpp  zoom_sdk_virtual_audio_mic_event_callbacks.cpp
src/binding/: auth_service_interface_binding.cpp  meeting_breakout_rooms_interface_v2_binding.cpp  meeting_chat_interface_binding.cpp  meeting_participants_ctrl_interface_binding.cpp  meeting_recording_interface_binding.cpp  meeting_reminder_ctrl_interface_binding.cpp  meeting_service_interface_binding.cpp  meeting_sharing_interface_binding.cpp  meeting_video_interface_binding.cpp  meeting_waiting_room_interface_binding.cpp  rawdata_audio_helper_interface_binding.cpp  rawdata_renderer_interface_binding.cpp  setting_service_interface_binding.cpp  zoom_rawdata_api_binding.cpp  zoom_sdk_binding.cpp  zoom_sdk_def_binding.cpp  zoom_sdk_raw_data_def_interface_binding.cpp
src/raw_record/: ZoomSDKRendererDelegate.h
src/zoom_meeting_sdk_python/: __init__.py
src/zoom_sample_app/util/: SocketServer.cpp  SocketServer.h
test_scripts/: binding_coverage.py  manual_rec-01.raw  test.py  test_audio_processing.py  test_join_meeting.py
zoom-meeting-sdk-python/: CMakeLists.txt  Dockerfile  README.md  sample.py
zoom-meeting-sdk-python/docker/: compose.yaml  raw_start.sh
zoom-meeting-sdk-python/sample_program/: deepgram_transcriber.py  meeting_bot.py  raw_audio_delegate.py  sample.py
zoom-meeting-sdk-python/src/: m1.cpp  m2.cpp  m4.cpp  zoom_meeting_sdk_python.cpp
zoom-meeting-sdk-python/src/zoom_sample_app/raw_record/: ZoomSDKRendererDelegate.cpp
zoom-meeting-sdk-python/src/zoomsdk/: auth_service_interface.h  zoom_sdk_def.h
