[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=2.1.0"]
build-backend = "scikit_build_core.build"

[project]
name = "zoom_meeting_sdk"
version = "0.0.1"
description = "Python Bindings for the Zoom Meeting SDK"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Noah Duncan", email = "nduncan@hmc.edu" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]

[project.urls]
Homepage = "https://github.com/noah-duncan/py-zoom-meeting-sdk"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Don't test Python 3.10 wheels on macOS/arm64
test-skip="*"
archs=["x86_64"]

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"